kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: superset
  labels:
    name: superset
    app: superset-marketing
    environment: production
