kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset
  namespace: superset
  labels:
    app: superset-marketing
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8088'
spec:
  selector:
    app: superset-marketing
  ports:
    - name: http
      port: 8088
      targetPort: 8088
  type: ClusterIP
